--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -50,6 +50,10 @@ endif # BLOCK
 config FS_POSIX_ACL
 	def_bool n
 
+# RICHACL utility routines
+config FS_RICHACL
+	def_bool n
+
 config EXPORTFS
 	tristate
 
