--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -253,6 +253,9 @@ config NFS_ACL_SUPPORT
 	tristate
 	select FS_POSIX_ACL
 
+config NFS_V4_COMMON
+	tristate
+
 config NFS_COMMON
 	bool
 	depends on NFSD || NFS_FS
