nilfs2: introduce nilfs2_debug() method
This patch adds basis for debugging subsystem in NILFS2.
It introduces kernel configuration option CONFIG_NILFS2_DEBUG that
enables debugging opportunity for NILFS2. This configuration option
is depended from CONFIG_NILFS2_FS.

The nilfs2_debug() method is a basic method for debugging output.
It receives a set of flags, format string and variable arguments list.
The debug subsystem has DBG_MASK variable. It defines flags of
subsystems and options that can be printed. The nilfs2_debug()
method compares DBG_MASK with flags during a call. If requested flags
are valid for output then debugging output takes place.

Signed-off-by: Vyacheslav Dubeyko <slava@dubeyko.com>
CC: Ryusuke Konishi <konishi.ryusuke@lab.ntt.co.jp>

--- a/fs/nilfs2/Kconfig
+++ b/fs/nilfs2/Kconfig
@@ -22,3 +22,16 @@ config NILFS2_FS
 
 	  To compile this file system support as a module, choose M here: the
 	  module will be called nilfs2.  If unsure, say N.
+
+if NILFS2_FS
+
+config NILFS2_DEBUG
+	bool "NILFS2 debugging"
+	default n
+	help
+	  If you are experiencing any problems with the NILFS2 filesystem, say
+	  Y here.  This will result in additional debugging messages to be
+	  written to the system log.  Under normal circumstances, this
+	  results in very little overhead.
+
+endif # NILFS2_FS
