nilfs2: introduce metadata (MDT) files debugging output option
This patch adds subsystem's flags for mdt.c, cpfile.c, dat.c,
ifile.c, sufile.c modules. Flags for these modules are
grouped by CONFIG_NILFS2_DEBUG_MDT_FILES kernel configuration
option. This kernel configuration option enables (or disables)
debugging output from of all above-mentioned modules.

Signed-off-by: Vyacheslav Dubeyko <slava@dubeyko.com>
CC: Ryusuke Konishi <konishi.ryusuke@lab.ntt.co.jp>

--- a/fs/nilfs2/Kconfig
+++ b/fs/nilfs2/Kconfig
@@ -53,6 +53,13 @@ config NILFS2_DEBUG_BASE_OPERATIONS
 	  This option enables debugging output in super.c, the_nilfs.c,
 	  namei.c, ioctl.c, inode.c, file.c, dir.c modules.
 
+config NILFS2_DEBUG_MDT_FILES
+	bool "Enable metadata (MDT) files subsystem debugging output"
+	default n
+	help
+	  This option enables debugging output in mdt.c, cpfile.c, dat.c,
+	  ifile.c, sufile.c modules.
+
 endif # NILFS2_DEBUG_SUBSYSTEMS
 
 endif # NILFS2_DEBUG
