nilfs2: introduce GC subsystem debugging output option
This patch adds subsystem's flags for gcinode.c module.
Flags for these modules are grouped by CONFIG_NILFS2_DEBUG_GC_SUBSYSTEM
kernel configuration option. This kernel configuration option enables
(or disables) debugging output from of all above-mentioned modules.

Signed-off-by: Vyacheslav Dubeyko <slava@dubeyko.com>
CC: Ryusuke Konishi <konishi.ryusuke@lab.ntt.co.jp>

--- a/fs/nilfs2/Kconfig
+++ b/fs/nilfs2/Kconfig
@@ -67,6 +67,12 @@ config NILFS2_DEBUG_SEGMENTS_SUBSYSTEM
 	  This option enables debugging output in segbuf.c, segment.c
 	  modules.
 
+config NILFS2_DEBUG_GC_SUBSYSTEM
+	bool "Enable GC subsystem debugging output"
+	default n
+	help
+	  This option enables debugging output in gcinode.c module.
+
 endif # NILFS2_DEBUG_SUBSYSTEMS
 
 endif # NILFS2_DEBUG
