nilfs2: introduce segments subsystem debugging output option
This patch adds subsystem's flags for segbuf.c, segment.c modules.
Flags for these modules are grouped by CONFIG_NILFS2_DEBUG_SEGMENTS_SUBSYSTEM
kernel configuration option. This kernel configuration option enables
(or disables) debugging output from of all above-mentioned modules.

Signed-off-by: Vyacheslav Dubeyko <slava@dubeyko.com>
CC: Ryusuke Konishi <konishi.ryusuke@lab.ntt.co.jp>

--- a/fs/nilfs2/Kconfig
+++ b/fs/nilfs2/Kconfig
@@ -60,6 +60,13 @@ config NILFS2_DEBUG_MDT_FILES
 	  This option enables debugging output in mdt.c, cpfile.c, dat.c,
 	  ifile.c, sufile.c modules.
 
+config NILFS2_DEBUG_SEGMENTS_SUBSYSTEM
+	bool "Enable segments subsystem debugging output"
+	default n
+	help
+	  This option enables debugging output in segbuf.c, segment.c
+	  modules.
+
 endif # NILFS2_DEBUG_SUBSYSTEMS
 
 endif # NILFS2_DEBUG
