nilfs2: introduce recovery subsystem debugging output option
This patch adds subsystem's flags for recovery.c module.
Flags for these modules are grouped by CONFIG_NILFS2_DEBUG_RECOVERY_SUBSYSTEM
kernel configuration option. This kernel configuration option enables
(or disables) debugging output from of all above-mentioned modules.

Signed-off-by: Vyacheslav Dubeyko <slava@dubeyko.com>
CC: Ryusuke Konishi <konishi.ryusuke@lab.ntt.co.jp>

--- a/fs/nilfs2/Kconfig
+++ b/fs/nilfs2/Kconfig
@@ -73,6 +73,12 @@ config NILFS2_DEBUG_GC_SUBSYSTEM
 	help
 	  This option enables debugging output in gcinode.c module.
 
+config NILFS2_DEBUG_RECOVERY_SUBSYSTEM
+	bool "Enable recovery subsystem debugging output"
+	default n
+	help
+	  This option enables debugging output in recovery.c module.
+
 endif # NILFS2_DEBUG_SUBSYSTEMS
 
 endif # NILFS2_DEBUG
