nilfs2: introduce block mapping subsystem debugging output option
This patch adds subsystem's flags for alloc.c, bmap.c, btnode.c,
btree.c, direct.c modules. Flags for these modules are grouped by
CONFIG_NILFS2_DEBUG_BLOCK_MAPPING kernel configuration option.
This kernel configuration option enables (or disables) debugging
output from of all above-mentioned modules.

Signed-off-by: Vyacheslav Dubeyko <slava@dubeyko.com>
CC: Ryusuke Konishi <konishi.ryusuke@lab.ntt.co.jp>

--- a/fs/nilfs2/Kconfig
+++ b/fs/nilfs2/Kconfig
@@ -79,6 +79,13 @@ config NILFS2_DEBUG_RECOVERY_SUBSYSTEM
 	help
 	  This option enables debugging output in recovery.c module.
 
+config NILFS2_DEBUG_BLOCK_MAPPING
+	bool "Enable block mapping subsystem debugging output"
+	default n
+	help
+	  This option enables debugging output in alloc.c, bmap.c, btnode.c,
+	  btree.c, direct.c modules.
+
 endif # NILFS2_DEBUG_SUBSYSTEMS
 
 endif # NILFS2_DEBUG
