nilfs2: introduce buffer management subsystem debugging output option
This patch adds subsystem's flags for page.c module.
Flags for these modules are grouped by
CONFIG_NILFS2_DEBUG_BUFFER_MANAGEMENT kernel configuration option.
This kernel configuration option enables (or disables) debugging
output from of all above-mentioned modules.

Signed-off-by: Vyacheslav Dubeyko <slava@dubeyko.com>
CC: Ryusuke Konishi <konishi.ryusuke@lab.ntt.co.jp>

--- a/fs/nilfs2/Kconfig
+++ b/fs/nilfs2/Kconfig
@@ -86,6 +86,12 @@ config NILFS2_DEBUG_BLOCK_MAPPING
 	  This option enables debugging output in alloc.c, bmap.c, btnode.c,
 	  btree.c, direct.c modules.
 
+config NILFS2_DEBUG_BUFFER_MANAGEMENT
+	bool "Enable buffer/page management subsystem debugging output"
+	default n
+	help
+	  This option enables debugging output in page.c module.
+
 endif # NILFS2_DEBUG_SUBSYSTEMS
 
 endif # NILFS2_DEBUG
