--- a/fs/nilfs2/Kconfig
+++ b/fs/nilfs2/Kconfig
@@ -119,6 +119,18 @@ config NILFS2_DEBUG_SHOW_SPAM
 	  option is depended implicitly from options that enable output of
 	  concrete modules of NILFS2 driver.
 
+config NILFS2_DEBUG_HEXDUMP
+	bool "Enable debugging hexdump of internal structures"
+	default n
+	help
+	  This option enables writing in system log hexdumps of internal
+	  structures. Some of big internal and raw on-disk structures can be
+	  written in system log for deep analysis of processed data related
+	  to an issue. Please, remember that hexdump output is depended
+	  implicitly from options that enable output of concrete modules of
+	  NILFS2 driver. It makes sense to log hexdumps only for modules that
+	  have enabled debugging output.
+
 endif # NILFS2_DEBUG_SUBSYSTEMS
 
 endif # NILFS2_DEBUG
