nilfs2: introduce option of showing internal errors
This patch adds CONFIG_NILFS2_DEBUG_SHOW_ERRORS kernel configuration
option. This option enables writing in system log messages about
internal errors of NILFS2 driver. Every such message records file,
function, line and code of error.

Signed-off-by: Vyacheslav Dubeyko <slava@dubeyko.com>
CC: Ryusuke Konishi <konishi.ryusuke@lab.ntt.co.jp>

--- a/fs/nilfs2/Kconfig
+++ b/fs/nilfs2/Kconfig
@@ -36,6 +36,15 @@ config NILFS2_DEBUG
 
 if NILFS2_DEBUG
 
+config NILFS2_DEBUG_SHOW_ERRORS
+	bool "Show internal errors"
+	default n
+	help
+	  This option enables writing in system log messages about internal
+	  errors of NILFS2 driver. Every such message records file, function,
+	  line and code of error. These types of debugging messages can be
+	  very usefull for understanding and analyzing reasons of an issue.
+
 config NILFS2_DEBUG_DUMP_STACK
 	bool "Enable dump stack output"
 	default n
